--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,32 @@ html, body, section, .full-height {
 
 #markdown {
     overflow: auto;
-    border-left: 1px solid black;
 }
 
 .pref{
+  float: right;
+  width: 50%;
   text-align: right;
+  padding-right: 10px;
+}
+
+.mode{
+  float: left;
+  width: 50%;
+  text-align: left;
+  padding-left: 10px;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
