--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,20 @@ html, body, section, .full-height {
   overflow:auto;
 }
 
+.optContainer{
+  position:fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 23px;
+  box-shadow: 0px 1px 11px -2px rgba(0,0,0,0.75);
+}
+
+#htmlPreview:focus{
+  outline: 1px solid #ECE6E6;
+}
+
 ::-webkit-scrollbar {
     width: 12px;
 }
