--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ html, body, section, .full-height {
   width: 100%;
   height: 28px;
   display:none;
-  /*box-shadow: 0px 1px 11px -2px rgba(0,0,0,0.75);*/
   border-bottom: 1px #BFBFBF solid;
+  background-color: #E8E8E8;
 }
 
 .editor-toolbar{
