--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ pre {
 
 .h3, h3 {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .col-md-4 p{
@@ -32,7 +32,6 @@ pre {
 
 .key_features{
   text-shadow: none;
-  font-weight: bold;
 }
 
 .tagline{
@@ -64,7 +63,7 @@ pre {
 .jumbotron {
    padding-top: 0;
    color: #ffffff;
-   background-image: url(https://raw.githubusercontent.com/amitmerchant1990/test/master/aurora-borelis.jpg); 
+   background-image: url(img/aurora-1.jpg); 
    background-size: cover; 
 }
 
