--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,33 @@ pre {
 }
 
 .outer-tile{
-  background-color: #9C27B0;
-  border-radius: 2px;
+  border-radius: 3px;
   margin: 6px;
+  height: 180px;
+}
+
+.purple-tile{
+  background-color: #9C27B0;
+}
+
+.green-tile{
+  background-color: #4CAF50;
+}
+
+.pink-tile{
+  background-color: #F06292;
+}
+
+.yellow-tile{
+  background-color: #FF9800;
+}
+
+.blue-tile{
+  background-color: #2196F3;
+}
+
+.maroon-tile{
+  background-color: #840045
 }
 
 .navbar-inverse {
@@ -112,4 +136,10 @@ pre {
 
 .navbar-header{
   width: 100%;
+}
+
+@media (min-width: 992px){
+  .col-md-4 {
+      width: 32.333333%;
+  }
 }
