--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,18 @@ pre {
   width: 100%;
 }
 
+#codefund_ad a {
+  color: #dbdbdb;
+}
+
+.cf-header {
+    color: #babdc1;
+}
+
+.cf-powered-by {
+    color: #babdc1;
+}
+
 @media (min-width: 992px){
   .col-md-4 {
       width: 31.333333%;
