--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -62,6 +62,8 @@ section,
     z-index: 999;
     width: 100%;
     height: 24px;
+    background-color: #D8DEE9;
+    position: fixed;
     box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -266,4 +268,8 @@ input[type="radio"]:checked:before {
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+.cm-s-base16-dark.CodeMirror{
+    padding: 10px;
 }
