--- a/css/darcula.css
+++ b/css/darcula.css
@@ -13,7 +13,7 @@ Darcula color scheme from the JetBrains family of IDEs
 }
 
 .hljs {
-  color: #bababa;
+  color: #ffffff;
   border-radius: 10px;
   padding: 28px;
   font-weight: bold;
